--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pre-commit = "^3.3.2"
 nitpick = "^0.33.2"
 wemake-python-styleguide = "^0.18.0"
 sphinx = "^7.0.1"
+pytest-mock = "^3.10.0"
 
 [build-system]
 requires = ["poetry-core"]
