--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ style = "https://raw.githubusercontent.com/wemake-services/wemake-python-stylegu
 
 [tool.poetry.dependencies]
 python = "^3.9.0"
-opencv-python = "^4.5.3.56"
+opencv-python = "==4.7.0.72"
 firebase-admin = "^6.1.0"
 schedule = "^1.2.0"
 
