--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,9 @@ style = "https://raw.githubusercontent.com/wemake-services/wemake-python-stylegu
 [tool.poetry.dependencies]
 python = "^3.9.0"
 opencv-python = "==4.7.0.72"
-firebase-admin = "^6.1.0"
 schedule = "^1.2.0"
+lib8relind = {git = "https://github.com/JayPankajPatel/8relind-rpi", rev = "main"}
+rocketry = "^2.5.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
@@ -28,8 +29,9 @@ safety = "^2.3.5"
 pre-commit = "^3.3.2"
 nitpick = "^0.33.2"
 wemake-python-styleguide = "^0.18.0"
-sphinx = "^7.0.1"
 pytest-mock = "^3.10.0"
+sphinx = "6.2.1"
+sphinx-rtd-theme = "^1.2.2"
 
 [build-system]
 requires = ["poetry-core"]
