--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ opencv-python = "==4.7.0.72"
 schedule = "^1.2.0"
 lib8relind = {git = "https://github.com/JayPankajPatel/8relind-rpi", rev = "main"}
 rocketry = "^2.5.1"
+smbus = "^1.1.post2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
